# c-calipto

./: .gitignore  CMakeLists.txt  README.md  \  bootstrap.cal  default.nix  effect.cal  effects.cal  macros.cal  make  reader.c  reader.h  repl  repl.c  repl.cal  scanner.c  scanner.h  sexpr.c  sexpr.h  test  ustring.c  ustring.h
apps/: shell.c
data/: bootstrap.ov  bootstrap2.ov  concat.ov  macros.ov  math.ov
include/c-calipto/: c-calipto.h  idtrie.h  interpreter.h  io.h  libpopcnt.h  popcount.h  reader.h  scanner.h  sexpr.h  stream.h  stringref.h
include/c-ohvu/: c-ohvu.h
lib/data/: sexpr.c  stringref.c
lib/interpreter/: builtins.c  interpreter.c
lib/intrie/: CMakeLists.txt  intrie.c
lib/intrie/test/: CMakeLists.txt
lib/reader/: reader.c  reader.h
lib/scanner/: scanner.c  scanner.h
lib/stream/: stream.c
libs/data/: CMakeLists.txt
libs/data/include/c-ohvu/data/: bdtrie.h  intrie.h  reader.h  sexpr.h
libs/data/src/: bdtrie.c  intrie.c  reader.c  sexpr.c
libs/data/test/: CMakeLists.txt  bdtrie_test.c  test.c
libs/io/: CMakeLists.txt
libs/io/include/c-ohvu/io/: scanner.h  stream.h  stringref.h
libs/io/src/: scanner.c  stream.c  stringref.c
libs/runtime/: CMakeLists.txt
libs/runtime/include/c-ohvu/runtime/: builtins.h  compiler.h  evaluator.h  interpreter.h
libs/runtime/src/: api.c  api.h  builtins.c  compile.c  compiler.c  compilerapi.h  evaluator.c  interpreter.c  lambda.c  lambda.h  parameters.c  statement.c
src/: CMakeLists.txt  bootstrap.ov  builtins.c  c-calipto.h.in  idtrie.c  interpreter.c  io.c  reader.c  scanner.c  sexpr.c  shell.c  shell.ov  stream.c  stringref.c
test/: CMakeLists.txt
